# mouffette

./: .gitignore
client/: CMakeLists.txt  README.md  build.sh
client/resources/: resources.qrc
client/src/: ClientInfo.cpp  ClientInfo.h  FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.h  MainWindow.cpp  MainWindow.h  WebSocketClient.cpp  WebSocketClient.h
server/: server.js
